MyOrg/src/objects/Company_Product__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsAvailable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsAvailable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>image__c</fullName>
        <label>image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Company Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CP-{000000}</displayFormat>
        <label>Company Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Company Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>